--- a/Tematy/T27b - tablica dwuwymiarowa znakow/style.css
+++ b/Tematy/T27b - tablica dwuwymiarowa znakow/style.css
@@ -71,3 +71,12 @@ button:hover
 {
     background-color: #00cfcf;
 }
+
+span
+{
+    border: black 1px solid;
+    background-color: mediumpurple;
+    color: wheat;
+    padding: 10px;
+    width: 20px;
+}
