--- a/Tematy/T31b - rysowanie ramki ze znaków/style.css
+++ b/Tematy/T31b - rysowanie ramki ze znaków/style.css
@@ -58,39 +58,7 @@ ul{
     margin-left: 350px;
 }
 
-button
+#wynik
 {
-    background-color: cyan;
-    width: 80px;
-    height: 45px;
-    border: none;
-    border-radius: 10px;
-    transition: all 0.2s ease-in-out;
-}
-button:hover
-{
-    background-color: #00cfcf;
-}
-
-span
-{
-    border: black 1px solid;
-    background-color: mediumpurple;
-    color: wheat;
-    padding: 10px;
-    width: 20px;
-}
-
-#black
-{
-    width: 20px;
-    height: 20px;
-    background-color: black;
-}
-
-#white
-{
-    width: 20px;
-    height: 20px;
-    background-color: white;
+    text-align: left;
 }
