--- a/Tematy/T30b - szachownica/style.css
+++ b/Tematy/T30b - szachownica/style.css
@@ -75,22 +75,19 @@ button:hover
 span
 {
     border: black 1px solid;
-    background-color: mediumpurple;
-    color: wheat;
     padding: 10px;
-    width: 20px;
 }
 
-#black
+.black
 {
-    width: 20px;
-    height: 20px;
+    width: 50px;
+    height: 50px;
     background-color: black;
 }
 
-#white
+.white
 {
-    width: 20px;
-    height: 20px;
+    width: 50px;
+    height: 50px;
     background-color: white;
 }
