--- a/Tematy/T32c - zaprojektuj własne trampki/style.css
+++ b/Tematy/T32c - zaprojektuj własne trampki/style.css
@@ -33,7 +33,7 @@ fieldset
     gap: 30px;
 }
 
-input[type="submit"], input[type="reset"]
+button
 {
     background-color: rgb(0, 200, 150);
     border: none;
@@ -45,7 +45,7 @@ input[type="submit"], input[type="reset"]
     transition: all 0.2s ease-in-out;
 }
 
-input[type="submit"]:hover, input[type="reset"]:hover
+button:hover
 {
     background-color: rgb(100, 200, 150);
 }
